--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "convex": "0.2.1",
+    "perf_hooks": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
