--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.7",
     "@vitejs/plugin-react": "^1.3.1",
     "vite": "^2.3.8"
   }
